--- a/package.json
+++ b/package.json
@@ -10,69 +10,61 @@
     "build": "tsc && vite build"
   },
   "dependencies": {
-    "@nanostores/persistent": "^0.5.1",
-    "@nanostores/react": "^0.1.5",
-    "@radix-ui/react-dropdown-menu": "^1.0.0",
-    "apca-w3": "^0.1.1",
-    "chroma-js": "^2.1.2",
-    "comlink": "^4.3.1",
+    "@nanostores/persistent": "^0.10.2",
+    "@nanostores/react": "^0.8.0",
+    "@radix-ui/react-dropdown-menu": "^2.1.2",
+    "apca-w3": "^0.1.9",
+    "chroma-js": "^3.1.2",
+    "comlink": "^4.4.2",
     "lodash": "^4.17.21",
-    "lz-string": "^1.4.4",
-    "nanostores": "^0.5.8",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "styled-components": "^5.3.5",
-    "use-local-storage-state": "^10.0.0",
-    "web-vitals": "^0.2.4",
-    "workbox-background-sync": "^5.1.3",
-    "workbox-broadcast-update": "^5.1.3",
-    "workbox-cacheable-response": "^5.1.3",
-    "workbox-core": "^5.1.3",
-    "workbox-expiration": "^5.1.3",
-    "workbox-google-analytics": "^5.1.3",
-    "workbox-navigation-preload": "^5.1.3",
-    "workbox-precaching": "^5.1.3",
-    "workbox-range-requests": "^5.1.3",
-    "workbox-routing": "^5.1.3",
-    "workbox-strategies": "^5.1.3",
-    "workbox-streams": "^5.1.3"
+    "lz-string": "^1.5.0",
+    "nanostores": "^0.11.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "styled-components": "^6.1.13",
+    "use-local-storage-state": "^19.5.0",
+    "workbox-background-sync": "^7.3.0",
+    "workbox-broadcast-update": "^7.3.0",
+    "workbox-cacheable-response": "^7.3.0",
+    "workbox-core": "^7.3.0",
+    "workbox-expiration": "^7.3.0",
+    "workbox-navigation-preload": "^7.3.0",
+    "workbox-precaching": "^7.3.0",
+    "workbox-range-requests": "^7.3.0",
+    "workbox-routing": "^7.3.0",
+    "workbox-strategies": "^7.3.0",
+    "workbox-streams": "^7.3.0"
   },
   "devDependencies": {
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "@types/chroma-js": "^2.1.3",
-    "@types/lodash": "^4.14.171",
+    "@testing-library/react": "^16.0.1",
+    "@testing-library/user-event": "^14.5.2",
+    "@types/chroma-js": "^2.4.4",
+    "@types/lodash": "^4.17.13",
     "@types/lz-string": "^1.3.34",
-    "@types/node": "^12.0.0",
-    "@types/react": "^18.0.17",
-    "@types/react-dom": "^18.0.6",
-    "@types/styled-components": "^5.1.26",
-    "@vitejs/plugin-react": "^2.0.0",
-    "sass": "^1.54.4",
-    "stylelint": "^13.13.1",
-    "stylelint-config-recommended": "^5.0.0",
+    "@types/node": "^22.9.3",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
+    "@types/styled-components": "^5.1.34",
+    "@vitejs/plugin-react": "^4.3.3",
+    "sass": "^1.81.0",
+    "stylelint": "^16.10.0",
+    "stylelint-config-recommended": "^14.0.1",
     "stylelint-config-styled-components": "^0.1.1",
     "stylelint-processor-styled-components": "^1.10.0",
-    "typescript": "^4.6.4",
-    "vite": "^3.0.4",
-    "vite-tsconfig-paths": "^3.5.0",
-    "vitest": "^0.22.1"
+    "typescript": "^5.7.2",
+    "vite": "^5.4.11",
+    "vite-tsconfig-paths": "^5.1.3",
+    "vitest": "^2.1.5"
   },
   "eslintConfig": {
     "extends": [
       "react-app"
     ]
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+  "browserslist": [
+    "> 2%",
+    "last 5 versions",
+    "Firefox ESR",
+    "not dead"
+  ]
 }
